fixed hero issue on mobiles

--- a/public/assets/css/app.scss
+++ b/public/assets/css/app.scss
@@ -26,20 +26,11 @@ body {
     z-index: 10000;
 }
 
-#hero{
-    min-height: 100vh;
-
-    @media only screen and (max-width: 640px) {
-        min-height: 100%;
-    }
-}
-
-
 /* Style the video: 100% width and height to cover the entire window */
 #myVideo {
     position: absolute; /* Or fixed if you want it to be the background of the whole site */
     right: 0;
-    bottom: 0;
+    // bottom: 0;
     z-index: -5;
 
     min-width: 100%;
@@ -48,6 +39,8 @@ body {
   }
 
   .hero-content{
+
+    
 
     h1{                
         font-size: 6em;
